Improve platform access management UX
